--- a/src/card/Card.module.css
+++ b/src/card/Card.module.css
@@ -6,8 +6,41 @@
   user-select: none;
 }
 
+.emptyCard {
+  /* width: 100%;
+  width: 500px;
+  height: 700px; */
+  background: radial-gradient(circle, rgb(20, 123, 129), rgb(15, 38, 35));
+  border-radius: 0.1rem;
+  border: 0.2rem solid white;
+}
+
+.card:has(.emptyCard) {
+  container-type: size;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .card img {
   width: 100%;
   height: 100%;
   object-fit: contain; /* Ensures the image covers the card area */
+}
+
+.emptyCard {
+  aspect-ratio: 5 / 7;
+  height: 100%;
+  width: unset;
+  position: relative;
+}
+
+/* When the container is too narrow for the height */
+@container (aspect-ratio <= 5/7) {
+  .emptyCard {
+    width: 100%;
+    height: unset;
+  }
 }
